newly add my tasks tab for community.html

--- a/community.html
+++ b/community.html
@@ -4,6 +4,7 @@
 <head>
     <title>Horizontal Menu | Layouts</title>
     <meta charset="utf-8">
+    <!--Template is from Madmin.swlabs.co. (2017). mAdmin | Angular. [online] Available at: http://madmin.swlabs.co/ [Accessed 9 Sep. 2017].-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="cache-control" content="no-cache">
@@ -40,7 +41,7 @@
                 <div class="topbar-main"><a id="menu-toggle" href="#" class="hidden-xs"><i class="fa fa-bars"></i></a>
                     <form id="topbar-search" action="#" method="GET" >
                         <div class="input-group">
-                            <input type="text" placeholder="Search..." class="form-control" /><span class="input-group-btn"><a href="javascript:;" class="btn submit"><i class="fa fa-search"></i></a></span>
+                            <input type="text" placeholder="Search for Job..." class="form-control" /><span class="input-group-btn"><a href="javascript:;" class="btn submit"><i class="fa fa-search"></i></a></span>
                         </div>
                     </form>
                     <ul class="nav navbar navbar-top-links navbar-left mbn text-right">
@@ -111,6 +112,8 @@
                                         <li class="active"><a href="#home" data-toggle="tab">Group</a>
                                         </li>
                                         <li><a href="#profile" data-toggle="tab">Friends</a>
+                                        </li>
+                                        <li><a href="#myTasks" data-toggle="tab">My Tasks</a>
                                         </li>
                                     </ul>
                                     <div id="myTabContent" class="tab-content">
@@ -232,6 +235,12 @@
                                                             </div>
                                                         </div>
                                                     </li>
+                                                </ul><div class="slimScrollBar" style="background: rgb(0, 0, 0); width: 7px; position: absolute; top: 11px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 127.033px;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;"></div></div>
+                                            </div>
+                                        </div>
+                                        <div id="myTasks" class="tab-pane fade">
+                                            <div style="overflow: hidden;" class="portlet-body">
+                                                <div class="slimScrollDiv" style="position: relative; overflow: scroll; width: 100%; height: 400px;"><ul class="todo-list sortable ui-sortable" style="overflow: scroll; width: 100%; height: 100%;">
                                                 </ul><div class="slimScrollBar" style="background: rgb(0, 0, 0); width: 7px; position: absolute; top: 11px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 127.033px;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;"></div></div>
                                             </div>
                                         </div>
