new document for test plan

--- a/community.html
+++ b/community.html
@@ -136,6 +136,7 @@
                                                             <div class="group-info col-xs-8">
                                                                 <h5>Group Banana</h5>
                                                                 <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
+                                                                <p>We have been taking care of: Corgi</p>
                                                             </div>
                                                         </div>
                                                     </li>
@@ -145,6 +146,7 @@
                                                             <div class="group-info col-xs-8">
                                                                 <h5>Group Cherry</h5>
                                                                 <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
+                                                                <p>We have been taking care of: British shorthair</p>
                                                             </div>
                                                         </div>
                                                     </li>
@@ -154,6 +156,7 @@
                                                             <div class="group-info col-xs-8">
                                                                 <h5>Group Date</h5>
                                                                 <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
+                                                                <p>We have been taking care of: Sphynx cat</p>
                                                             </div>
                                                         </div>
                                                     </li>
@@ -241,6 +244,30 @@
                                         <div id="myTasks" class="tab-pane fade">
                                             <div style="overflow: hidden;" class="portlet-body">
                                                 <div class="slimScrollDiv" style="position: relative; overflow: scroll; width: 100%; height: 400px;"><ul class="todo-list sortable ui-sortable" style="overflow: scroll; width: 100%; height: 100%;">
+                                                    <li class="clearfix"><span class="drag-drop"><i></i></span>
+                                                        <div class="todo-check pull-left">
+                                                            <div class="icheckbox_minimal-grey" style="position: relative;"><input type="checkbox" value="" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div>
+                                                        </div>
+                                                        <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
+                                                        <div class="todo-actions pull-right clearfix"><a href="#" class="todo-complete"><i class="fa fa-check"></i></a><a href="#" class="todo-edit"><i class="fa fa-edit"></i></a><a href="#" class="todo-remove"><i class="fa fa-trash-o"></i></a>
+                                                        </div>
+                                                    </li>
+                                                    <li class="clearfix"><span class="drag-drop"><i></i></span>
+                                                        <div class="todo-check pull-left">
+                                                            <div class="icheckbox_minimal-grey" style="position: relative;"><input type="checkbox" value="" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div>
+                                                        </div>
+                                                        <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
+                                                        <div class="todo-actions pull-right clearfix"><a href="#" class="todo-complete"><i class="fa fa-check"></i></a><a href="#" class="todo-edit"><i class="fa fa-edit"></i></a><a href="#" class="todo-remove"><i class="fa fa-trash-o"></i></a>
+                                                        </div>
+                                                    </li>
+                                                    <li class="clearfix"><span class="drag-drop"><i></i></span>
+                                                        <div class="todo-check pull-left">
+                                                            <div class="icheckbox_minimal-grey" style="position: relative;"><input type="checkbox" value="" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div>
+                                                        </div>
+                                                        <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
+                                                        <div class="todo-actions pull-right clearfix"><a href="#" class="todo-complete"><i class="fa fa-check"></i></a><a href="#" class="todo-edit"><i class="fa fa-edit"></i></a><a href="#" class="todo-remove"><i class="fa fa-trash-o"></i></a>
+                                                        </div>
+                                                    </li>
                                                 </ul><div class="slimScrollBar" style="background: rgb(0, 0, 0); width: 7px; position: absolute; top: 11px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 127.033px;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;"></div></div>
                                             </div>
                                         </div>
