--- a/group_chat.html
+++ b/group_chat.html
@@ -114,9 +114,9 @@
                         <div class="panel-body">
                             <div class="main-menu col-lg-6">
                                 <ul id="myTab" class="nav nav-tabs">
-                                    <li class="active"><a href="#home" data-toggle="tab">Group</a>
+                                    <li class="active"><a href="#home" data-toggle="tab">Group <button type="button" class="btn btn-default btn-xs"><i class="fa fa-sign-out"></i></button></a>
                                     </li>
-                                    <li><a href="#profile" data-toggle="tab">Friends</a>
+                                    <li><a href="#profile" data-toggle="tab">Shared Jobs</a>
                                     </li>
                                     <li><a href="#myTasks" data-toggle="tab">My Tasks</a>
                                     </li>
@@ -154,7 +154,34 @@
                                         </div>
                                     </div>
                                     <div id="profile" class="tab-pane fade">
-
+                                        <div style="overflow: hidden;" class="portlet-body">
+                                            <div class="slimScrollDiv" style="position: relative; overflow: scroll; width: 100%; height: 400px;"><ul class="todo-list sortable ui-sortable" style="overflow: scroll; width: 100%; height: 100%;">
+                                                <li class="clearfix"><span class="drag-drop"><i></i></span>
+                                                    <div class="todo-check pull-left">
+                                                        <div class="icheckbox_minimal-grey" style="position: relative;"><input type="checkbox" value="" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div>
+                                                    </div>
+                                                    <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
+                                                    <div class="todo-actions pull-right clearfix"><a href="#" class="todo-agree"><i class="fa fa-thumbs-up"></i><span class="badge badge-green">7</span></a><a href="#" class="todo-disagree"> <i class="fa fa-thumbs-down"></i><span class="badge badge-red">7</span></a>
+                                                    </div>
+                                                </li>
+                                                <li class="clearfix"><span class="drag-drop"><i></i></span>
+                                                    <div class="todo-check pull-left">
+                                                        <div class="icheckbox_minimal-grey" style="position: relative;"><input type="checkbox" value="" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div>
+                                                    </div>
+                                                    <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
+                                                    <div class="todo-actions pull-right clearfix"><a href="#" class="todo-agree"><i class="fa fa-thumbs-up"></i><span class="badge badge-green">7</span></a><a href="#" class="todo-disagree"> <i class="fa fa-thumbs-down"></i><span class="badge badge-red">7</span></a>
+                                                    </div>
+                                                </li>
+                                                <li class="clearfix"><span class="drag-drop"><i></i></span>
+                                                    <div class="todo-check pull-left">
+                                                        <div class="icheckbox_minimal-grey" style="position: relative;"><input type="checkbox" value="" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div>
+                                                    </div>
+                                                    <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
+                                                    <div class="todo-actions pull-right clearfix"><a href="#" class="todo-agree"><i class="fa fa-thumbs-up"></i><span class="badge badge-green">7</span></a><a href="#" class="todo-disagree"> <i class="fa fa-thumbs-down"></i><span class="badge badge-red">7</span></a>
+                                                    </div>
+                                                </li>
+                                            </ul><div class="slimScrollBar" style="background: rgb(0, 0, 0); width: 7px; position: absolute; top: 11px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 127.033px;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;"></div></div>
+                                        </div>
                                     </div>
                                     <div id="myTasks" class="tab-pane fade">
                                         <div style="overflow: hidden;" class="portlet-body">
@@ -190,7 +217,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="btn-group btn-group-justified"><a role="button" class="btn btn-info">Community</a><a role="button" class="btn btn-success">Group</a><a role="button" class="btn btn-warning">Contact</a>
+                    <div class="btn-group btn-group-justified"><a role="button" class="btn btn-info">Community</a><a role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-warning">Contact</a>
                     </div>
                 </div>
             </div>
