--- a/ownerjoblist.html
+++ b/ownerjoblist.html
@@ -203,7 +203,7 @@
         ga('create', 'UA-145464-14', 'auto');
         ga('send', 'pageview');
     </script>
-    <script type="text/javascript" src="js/owner.js"></script>
+    <script type="text/javascript" src="owner.js"></script>
 </body>
 
 </html>
