new profile photo for group, job, team.

--- a/joblist_care.html
+++ b/joblist_care.html
@@ -106,7 +106,7 @@
                 <div class="panel">
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4"><i class="fa fa-paw media-object" style="width: 50px; height: 50px; font-size: 50px"></i></div>
+                            <div class="col-xs-4"><img src="./images/pet01.png" style="width: 70px; height: 70px;" class="media-object"></div>
                             <div class="group-info col-xs-8">
                                 Cat: Kitty
                                 <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
@@ -120,7 +120,7 @@
                 <div class="panel">
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4"><i class="fa fa-paw media-object" style="width: 50px; height: 50px; font-size: 50px"></i></div>
+                            <div class="col-xs-4"><img src="./images/pet02.png" style="width: 70px; height: 70px;" class="media-object"></div>
                             <div class="group-info col-xs-8">
                                 Cat: Kitty
                                 <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
@@ -134,7 +134,7 @@
                 <div class="panel">
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4"><i class="fa fa-paw media-object" style="width: 50px; height: 50px; font-size: 50px"></i></div>
+                            <div class="col-xs-4"><img src="./images/pet03.png" style="width: 70px; height: 70px;" class="media-object"></div>
                             <div class="group-info col-xs-8">
                                 Cat: Kitty
                                 <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
@@ -148,7 +148,7 @@
                 <div class="panel">
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4"><i class="fa fa-paw media-object" style="width: 50px; height: 50px; font-size: 50px"></i></div>
+                            <div class="col-xs-4"><img src="./images/pet04.png" style="width: 70px; height: 70px;" class="media-object"></div>
                             <div class="group-info col-xs-8">
                                 Cat: Kitty
                                 <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
@@ -162,7 +162,7 @@
                 <div class="panel">
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4"><i class="fa fa-paw media-object" style="width: 50px; height: 50px; font-size: 50px"></i></div>
+                            <div class="col-xs-4"><img src="./images/pet05.png" style="width: 70px; height: 70px;" class="media-object"></div>
                             <div class="group-info col-xs-8">
                                 Cat: Kitty
                                 <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
