--- a/group_chat.html
+++ b/group_chat.html
@@ -125,23 +125,23 @@
                                     <div id="home" class="tab-pane fade in active">
                                         <div class="chat-scroller">
                                             <ul class="chats">
-                                                <li class="in"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/48.jpg" class="avatar img-responsive" />
+                                                <li class="in"><img src="./images/User3.png" class="avatar img-responsive" />
                                                     <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Admin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
                                                     </div>
                                                 </li>
-                                                <li class="out"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg" class="avatar img-responsive" />
+                                                <li class="out"><img src="./images/User1.png" class="avatar img-responsive" />
                                                     <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Admin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 18:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
                                                     </div>
                                                 </li>
-                                                <li class="in"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/48.jpg" class="avatar img-responsive" />
+                                                <li class="in"><img src="./images/User2.png" class="avatar img-responsive" />
                                                     <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Admin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
                                                     </div>
                                                 </li>
-                                                <li class="out"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg" class="avatar img-responsive" />
+                                                <li class="out"><img src="./images/User1.png" class="avatar img-responsive" />
                                                     <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Admin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 18:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
                                                     </div>
                                                 </li>
-                                                <li class="in"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/48.jpg" class="avatar img-responsive" />
+                                                <li class="in"><img src="./images/User3.png" class="avatar img-responsive" />
                                                     <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Admin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
                                                     </div>
                                                 </li>
@@ -188,7 +188,7 @@
                                                 <div class="col-xs-4">
                                                     <a class="btn-default btn-xs back-btn"><i class="fa fa-arrow-left"></i> Back</a>
                                                 </div>
-                                                <div class="col-xs-4"><img src="./images/User5.png" style="width: 50px; height: 50px;" class="media-object"></div>
+                                                <div class="col-xs-4"><img src="./images/pet01.png" style="width: 50px; height: 50px;" class="media-object"></div>
                                                 <table class="table table-striped table-hover">
                                                     <tbody>
                                                     <tr>
@@ -493,16 +493,18 @@
 
         });
 
-        $('a.todo-agree').click(function(){
+        $('a.todo-agree').click(function(e){
             var $now = parseInt($(this).find("span").text());
             $now = $now + 1;
             $(this).find("span").text($now);
+            e.stopPropagation();
         });
 
-        $('a.todo-disagree').click(function(){
+        $('a.todo-disagree').click(function(e){
             var $now = parseInt($(this).find("span").text());
             $now = $now + 1;
             $(this).find("span").text($now);
+            e.stopPropagation();
         });
 
     });
